--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -28,14 +28,14 @@
         }
         img {
             width: 100%;
-            height: calc(100vh - 64px);
+            height: calc(100vh - 70px);
             object-fit: cover;
             filter: brightness(30%);
         }
         
-        .full {
-            min-height: 820px;
-        }
+        // .full {
+        //     min-height: 1057px;
+        // }
     }
     a.scroll {
         text-align: center;
@@ -65,6 +65,9 @@
                 height: 100vh; 
                 width: 100%;
             }
+            // .full {
+            //     min-height: 100vh;
+            // }
         }
     }
 }
